--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,3 +50,36 @@ img {
   width: 100%;
   height: auto;
 }
+/* 
+.colors{
+  color: #FFD34E;
+  color: #EE457E;
+  color: #F4E8D1;
+} */
+
+li {
+  background-image: linear-gradient(
+    90deg,
+    #000000aa 50%,
+    #00000055 75%,
+    #00000000
+  );
+  margin: 15px 0;
+  border-radius: 10px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
