--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -21,32 +21,6 @@ body {
   overflow: scroll;
 }
 
-// .right {
-//   border: 1px solid black;
-//   height: 100vh;
-//   position: fixed;
-//   width: 400px;
-//   top: 0;
-//   right: 0;
-//   font-size: 20px;
-//   display: flex;
-//   flex-direction: column;
-// }
-
-// button {
-//   font-size: 20px;
-//   background-color: #111;
-//   color: #eee;
-//   padding: 3px;
-//   margin: 5px;
-//   cursor: pointer;
-// }
-
-// button:disabled {
-//   background-color: #333;
-//   cursor: auto;
-// }
-
 .container-wrapper {
   img {
     width: 10em;
@@ -105,6 +79,12 @@ body {
   .backdrop-image {
     height: 80vh;
     width: auto;
+  }
+  nav {
+    height: "100%";
+    border-left: "2px solid #2e7e0b";
+    box-shadow: "0px 0px 15px 0px #2e7e0b";
+    z-index: 2;
   }
 }
 
