--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -11,8 +11,8 @@
 }
 
 body {
-  background-color: #222;
-  color: #ccc;
+  background-color: #111;
+  color: #ddd;
 }
 
 .container {
@@ -22,11 +22,6 @@ body {
 }
 
 .container-wrapper {
-  img {
-    width: 10em;
-    height: auto;
-  }
-
   li {
     a {
       width: 100%;
@@ -60,8 +55,12 @@ body {
     text-transform: uppercase;
   }
 
-  .logo {
+  .logo-wrapper {
     margin: 20px 0;
+    img {
+      width: 10em;
+      height: auto;
+    }
   }
 }
 
@@ -71,20 +70,28 @@ body {
     height: 100%;
     background: #352c20 !important;
   }
-  img {
-    width: 100%;
-    height: auto;
-    cursor: pointer;
-  }
-  .backdrop-image {
-    height: 80vh;
-    width: auto;
-  }
-  nav {
-    height: "100%";
-    border-left: "2px solid #2e7e0b";
-    box-shadow: "0px 0px 15px 0px #2e7e0b";
-    z-index: 2;
+  .aside-bar {
+    box-shadow: 0px 2px 15px 0px #2e7e0b;
+    border-left: 2px solid #2e7e0b;
+    z-index: 401; //because leaflet map is 400
+    nav {
+      height: 100vh;
+      overflow-x: hidden;
+      overflow-y: auto;
+      img {
+        width: 100%;
+        height: auto;
+        cursor: pointer;
+      }
+      .backdrop-image {
+        height: 80vh;
+        width: auto;
+      }
+      button {
+        font-weight: bold;
+        font-size: 1rem;
+      }
+    }
   }
 }
 
