--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -93,6 +93,22 @@ body {
       }
     }
   }
+
+  .game-score {
+    cursor: pointer;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    box-shadow: 0px 2px 15px 0px #2e7e0b;
+    border: 2px solid #2e7e0b;
+    z-index: 401;
+    background-color: #000000dd;
+    h6 {
+      font-size: 1.2rem;
+      text-align: center;
+      padding: 0 0.5em;
+    }
+  }
 }
 
 @keyframes fadeIn {
