--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -120,6 +120,7 @@ body {
 
 .loading-text {
   background-color: #000000dd;
+  z-index: 500;
   position: absolute;
   height: 100%;
   width: 100%;
