--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -71,12 +71,13 @@ body {
   height: 100vh;
   .leaflet-container {
     height: 100%;
-    background: #352c20 !important;
+    background-color: #342c1f; // hsl(34, 25%, 17%);
   }
   .aside-bar {
     box-shadow: 0px 2px 15px 0px #2e7e0b;
     border-left: 2px solid #2e7e0b;
     z-index: 401; //because leaflet map is 400
+    background-color: hsl(34, 25%, 7%);
     nav {
       height: 100vh;
       overflow-x: hidden;
@@ -90,30 +91,57 @@ body {
           cursor: pointer;
         }
       }
+      .guess-button-wrapper {
+        margin: 8px;
+        display: flex;
+        justify-content: center;
+        button {
+          font-size: 18px;
+          text-transform: capitalize;
+        }
+      }
       .backdrop-image {
         height: 80vh;
         width: auto;
       }
-      button {
-        font-weight: bold;
-        font-size: 1rem;
+      .map-selector {
+        button {
+          font-size: 1rem;
+          text-transform: capitalize;
+        }
+        #maps-panel {
+          background-color: hsl(34, 25%, 8%);
+        }
       }
     }
   }
-
-  .game-score {
-    cursor: pointer;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    box-shadow: 0px 2px 15px 0px #2e7e0b;
-    border: 2px solid #2e7e0b;
-    z-index: 401;
-    background-color: #000000dd;
-    h6 {
-      font-size: 1.2rem;
-      text-align: center;
-      padding: 0 0.5em;
+  .game-score-wrapper {
+    .game-score {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      box-shadow: 0px 2px 15px 0px #2e7e0b;
+      border: 2px solid #2e7e0b;
+      z-index: 401;
+      //grid-template-columns: 1fr 1fr;
+      background-color: #000000dd;
+      .game-score-item {
+        padding: 0 1.5rem;
+        h6 {
+          font-size: 1.125rem;
+          text-align: center;
+          color: hsl(0, 0%, 75%);
+        }
+        h5 {
+          text-align: center;
+          font-weight: bold;
+          font-size: 1.625rem;
+        }
+        button {
+          font-size: 1.125rem;
+          text-transform: capitalize;
+        }
+      }
     }
   }
 }
