--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -91,6 +91,27 @@ body {
           cursor: pointer;
         }
       }
+      .magnifier-overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        pointer-events: none;
+        opacity: 0;
+        transition: opacity 0.2s;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 3rem;
+        color: #fff;
+        text-shadow: 0 0 8px #000;
+        background-color: rgba(0, 0, 0, 0.5); // half transparent
+      }
+
+      .figure-hovered .magnifier-overlay {
+        opacity: 1;
+      }
       .guess-button-wrapper {
         margin: 8px;
         display: flex;
@@ -118,9 +139,9 @@ body {
   }
   .game-score-wrapper {
     .game-score {
-      position: fixed;
-      bottom: 0;
-      left: 0;
+      position: absolute;
+      top: 0;
+      right: 25vw;
       box-shadow: 0px 2px 15px 0px #2e7e0b;
       border: 2px solid #2e7e0b;
       z-index: 401;
