--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -23,7 +23,8 @@ body {
 
 .container-wrapper {
   li {
-    a {
+    a,
+    span.navItem {
       width: 100%;
       background-image: linear-gradient(90deg, #222222bb 60%, #00000000);
       padding: 0.5em;
@@ -35,7 +36,8 @@ body {
       transition-duration: 0.3s;
     }
 
-    a:hover {
+    a:hover,
+    span.navItem:hover {
       transform: translateX(25px);
       scale: 1.2;
     }
@@ -48,7 +50,7 @@ body {
     font-size: 1.6rem;
   }
 
-  h3 {
+  h3.title {
     text-align: center;
     // font-family: "mh_font";
     font-family: "Playfair Display", serif;
