--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -49,15 +49,24 @@ body {
     font-style: normal;
     font-size: 1.6rem;
   }
-
-  h3.title {
+  .home-header-paper {
+    padding: 1rem;
     text-align: center;
-    // font-family: "mh_font";
-    font-family: "Playfair Display", serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-size: 2.5rem;
-    text-transform: uppercase;
+    background-color: rgba(0, 0, 0, 0.8);
+    border: 2px solid #2e7e0b;
+    box-shadow: 0px 2px 15px 0px #2e7e0b;
+    h3 {
+      text-align: center;
+      font-family: "Playfair Display", serif;
+      font-optical-sizing: auto;
+      font-weight: 400;
+      font-size: 2.5rem;
+      text-transform: uppercase;
+    }
+    p {
+      font-size: 1.125rem;
+      margin-bottom: 20px;
+    }
   }
 
   .logo-wrapper {
@@ -65,6 +74,39 @@ body {
     img {
       width: 7em;
       height: auto;
+    }
+  }
+  .menu-backdrop-tab {
+    max-height: 100%;
+    overflow-y: auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 700px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.95);
+    border: 2px solid #2e7e0b;
+    box-shadow: 0px 2px 15px 0px #2e7e0b;
+    .close-button {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+    }
+    h3 {
+      margin: 32px 0;
+    }
+    h5 {
+      font-weight: bold;
+      margin-bottom: 12px;
+    }
+    p {
+      font-size: 1.125rem;
+      margin-bottom: 20px;
+    }
+    li {
+      margin-bottom: 8px;
+      padding-left: 8px;
     }
   }
 }
