db saves info about user submitting data, api validates the user

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -108,6 +108,16 @@ body {
       margin-bottom: 8px;
       padding-left: 8px;
     }
+    ol {
+      font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+      font-size: 1.125rem;
+      color: #fff;
+      margin-bottom: 16px;
+      padding-left: 24px;
+      li {
+        margin-bottom: 12px;
+      }
+    }
   }
 }
 
